# Pallet-Detection

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  template.py
.github/workflows/: ci-cd.yml
data/labels/: data.yaml
mlruns/0/: meta.yaml
runs/detect/pallet_model2/: args.yaml  results.csv
src/api/: app.py  routes.py
src/api/static/css/: style.css
src/api/static/js/: main.js
src/api/templates/: index.html
src/app/static/css/: style.css
src/app/static/js/: script.js
src/app/templates/: index.html
src/config/: config.py
src/scripts/: inference.py  train.py  visualize.py
src/services/: data_service.py  image_service.py  model_service.py
src/utils/: helper.py  logger.py
testing/: test_inference.py  test_model.py
tests/: test_api.py  test_inference.py  test_model.py
